chore: migrate tests to JUnit5 (refs #358)
* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor code cleanup