@@ -1,6 +1,5 @@
 package org.jenkinsci.plugins.gwt.whitelist;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.jenkinsci.plugins.gwt.whitelist.HMACVerifier.hmacVerify;
 
@@ -8,17 +7,17 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.jenkinsci.plugins.gwt.global.WhitelistAlgorithm;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class HMACVerifierTest {
+class HMACVerifierTest {
 
     @Test
-    public void testThatHmacCanBeVerifiedAndValidHex() throws Exception {
+    void testThatHmacCanBeVerifiedAndValidHex() throws Exception {
         final String postContent = this.getPostContent();
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -31,7 +30,7 @@ public class HMACVerifierTest {
     }
 
     @Test
-    public void testThatHmacCanBeVerifiedAndValid() throws Exception {
+    void testThatHmacCanBeVerifiedAndValid() throws Exception {
         final String postContent = this.getPostContent();
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -44,7 +43,7 @@ public class HMACVerifierTest {
     }
 
     @Test
-    public void testThatHmacCanBeVerifiedAndValidHmacPrefixHeader() throws Exception {
+    void testThatHmacCanBeVerifiedAndValidHmacPrefixHeader() throws Exception {
         final String postContent = this.getPostContent();
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -57,7 +56,7 @@ public class HMACVerifierTest {
     }
 
     @Test
-    public void testThatHmacCanBeBase64() throws Exception {
+    void testThatHmacCanBeBase64() {
         final String postContent = "whatever";
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -72,7 +71,7 @@ public class HMACVerifierTest {
     }
 
     @Test
-    public void testThatHmacCanBeVerifiedAndValidWIthoutAlgorithmInHeader() throws Exception {
+    void testThatHmacCanBeVerifiedAndValidWIthoutAlgorithmInHeader() throws Exception {
         final String postContent = this.getPostContent();
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -86,7 +85,7 @@ public class HMACVerifierTest {
     }
 
     @Test
-    public void testThatHmacCanBeVerifiedAndInvalid() throws Exception {
+    void testThatHmacCanBeVerifiedAndInvalid() throws Exception {
         final String postContent = this.getPostContent();
         final String hmacSecret = "this is secret";
         final String algorithm = WhitelistAlgorithm.HMAC_SHA256.getFullName();
@@ -101,16 +100,14 @@ public class HMACVerifierTest {
 
     private Map<String, List<String>> getHeaders(final String hmacHeader, final String value) {
         final Map<String, List<String>> headers = new HashMap<>();
-        headers.put(hmacHeader, Arrays.asList(value));
+        headers.put(hmacHeader, Collections.singletonList(value));
         return headers;
     }
 
     private String getPostContent() throws IOException, URISyntaxException {
-        final String postContent = new String(
-                Files.readAllBytes(Paths.get(this.getClass()
-                        .getResource("/hmac/hmac-bitbucket-server-payload.json")
-                        .toURI())),
-                UTF_8);
+        final String postContent = Files.readString(Paths.get(this.getClass()
+                .getResource("/hmac/hmac-bitbucket-server-payload.json")
+                .toURI()));
         return postContent;
     }
 
@@ -119,8 +116,7 @@ public class HMACVerifierTest {
             final String postContent,
             final String hmacHeader,
             final String hmacSecret,
-            final String algorithm)
-            throws WhitelistException {
+            final String algorithm) {
         try {
             hmacVerify(headers, postContent, hmacHeader, hmacSecret, algorithm);
             return true;
